@@ -23,37 +23,38 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Transactional
 public class UserService {
-    
+
     private final UserRepository userRepository;
     private final AddressRepository addressRepository;
     private final JwtService jwtService;
-      public UserResponse createUser(UserSignupRequest request) {
-        if (request.getFirstName() == null || request.getLastName() == null || 
-            request.getEmail() == null || request.getPassword() == null || 
-            request.getPhone() == null || request.getAddress() == null) {
+
+    public void createUser(UserSignupRequest request) {
+        if (request.getFirstName() == null || request.getLastName() == null ||
+                request.getEmail() == null || request.getPassword() == null ||
+                request.getPhone() == null || request.getAddress() == null) {
             throw ValidationException.missingRequiredField("required user fields");
         }
-        
+
         if (userRepository.existsByEmail(request.getEmail())) {
             throw ValidationException.emailAlreadyExists();
         }
-        
+
         User user = new User();
         user.setFirstName(request.getFirstName());
         user.setLastName(request.getLastName());
         user.setEmail(request.getEmail());
-        user.setPassword(request.getPassword()); 
+        user.setPassword(request.getPassword());
         user.setPhone(request.getPhone());
-        
+
         User savedUser = userRepository.save(user);
-        
+
         if (request.getAddress() != null) {
             Address address = new Address();
             address.setUser(savedUser);
             address.setStreet(request.getAddress().getStreet());
             address.setCity(request.getAddress().getCity());
             address.setState(request.getAddress().getState());
-            
+
             try {
                 if (request.getAddress().getZipCode() != null && !request.getAddress().getZipCode().trim().isEmpty()) {
                     address.setZipCode(Integer.valueOf(request.getAddress().getZipCode()));
@@ -61,27 +62,27 @@ public class UserService {
             } catch (NumberFormatException e) {
                 address.setZipCode(null);
             }
-            
+
             address.setCountry(request.getAddress().getCountry());
-            
+
             addressRepository.save(address);
         }
-        
-        return convertToUserResponse(savedUser);
+
+        convertToUserResponse(savedUser);
     }
-    
+
     public String authenticateUser(UserLoginRequest request) {
         Optional<User> userOpt = userRepository.findByEmail(request.getEmail());
-        
+
         if (userOpt.isEmpty()) {
             throw AuthenticationException.invalidCredentials();
         }
-        
+
         User user = userOpt.get();
         if (!request.getPassword().equals(user.getPassword())) {
             throw AuthenticationException.invalidCredentials();
         }
-        
+
         String createdAtString = "";
         try {
             if (user.getCreatedAt() != null) {
@@ -90,35 +91,34 @@ public class UserService {
         } catch (Exception e) {
             createdAtString = "";
         }
-        
+
         return jwtService.generateUserToken(
-            user.getUserId(), 
-            user.getEmail(), 
-            user.getFirstName(),
-            user.getLastName(),
-            user.getPhone(),
-            createdAtString
-        );
+                user.getUserId(),
+                user.getEmail(),
+                user.getFirstName(),
+                user.getLastName(),
+                user.getPhone(),
+                createdAtString);
     }
-    
+
     public List<UserResponse> getAllUsersWithDetails() {
         return userRepository.findAllWithDetails()
                 .stream()
                 .map(this::convertToUserResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
     public void deleteUser(Long userId) {
         if (!userRepository.existsById(userId)) {
             throw ResourceNotFoundException.userNotFound(userId);
         }
         userRepository.deleteById(userId);
     }
-    
+
     public Optional<User> findById(Long userId) {
         return userRepository.findById(userId);
     }
-    
+
     private UserResponse convertToUserResponse(User user) {
         UserResponse response = new UserResponse();
         response.setUserId(user.getUserId());
@@ -127,7 +127,7 @@ public class UserService {
         response.setEmail(user.getEmail());
         response.setPhone(user.getPhone());
         response.setCreatedAt(user.getCreatedAt());
-        
+
         if (user.getAddress() != null) {
             AddressResponse addressResponse = new AddressResponse();
             addressResponse.setAddressId(user.getAddress().getAddressId());
@@ -138,7 +138,7 @@ public class UserService {
             addressResponse.setCountry(user.getAddress().getCountry());
             response.setAddress(addressResponse);
         }
-        
+
         return response;
     }
-} 
+}
